Optimize HttpHeaders.getAcceptLanguageAsLocales
The HttpHeaders.getAcceptLanguageAsLocales was incurring overhead from using a Stream,
as well as calling the fairly expensive Locale.getDisplayName method.

Switch to using an ArrayList, and skipping over wildcard ranges to avoid needing to check
the display name.